# llm-eval-tool

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: benchmarks.yaml  models.yaml  prompts.yaml  runner.yaml  tools.yaml
data/: aimo3_reference.jsonl  aimo3_reference_multiturn.jsonl  aimo3_reference_tools.jsonl  language_understanding.jsonl  sample_logic.jsonl  sample_math.jsonl  sample_multiturn.jsonl  sample_tools.jsonl
docs/: evaluation-results.md
reports/: deepseek_v4_flash_thinking_none_high_all_active_20260516.md  deepseek_v4_pro_none_high_all_active_4h_15c_20260516.md  deepseek_v4_pro_none_high_completed_subset_20260517.md  openrouter_deepseek_v4_pro_none_high_language_20c_20260517.md  openrouter_gemma_4_31b_it_nitro_all_active_combined_20260517.md  openrouter_gemma_4_31b_it_nitro_language_20c_20260517.md  openrouter_gemma_4_31b_it_nitro_tool_retries_50_20260517.md
results/: deepseek_v4_flash_thinking_none_high_all_active_20260516.jsonl  deepseek_v4_pro_none_high_all_active_4h_15c_20260516.jsonl  deepseek_v4_pro_none_high_completed_subset_20260517.jsonl  openrouter_deepseek_v4_pro_none_high_language_20c_20260517.jsonl  openrouter_gemma_4_31b_it_nitro_all_active_combined_20260517.jsonl  openrouter_gemma_4_31b_it_nitro_language_20c_20260517.jsonl  openrouter_gemma_4_31b_it_nitro_remaining_active_20c_retry_20260517.jsonl  openrouter_gemma_4_31b_it_nitro_tool_retries_50_20260517.jsonl
src/agent_eval/: __init__.py  cli.py  config.py  events.py  llm.py  reporting.py  result_browser.py  runner.py  schemas.py  scoring.py  stats.py  tools.py  trace_writer.py
src/agent_eval/flows/: __init__.py  multi_turn.py  single_turn.py  tool_calling.py
src/llm_eval/: cli.py  config.py  events.py  extraction.py  llm.py  reporting.py  result_browser.py  runner.py  schemas.py  scoring.py  stats.py  tools.py  trace_writer.py
src/llm_eval/flows/: __init__.py  multi_turn.py  single_turn.py  tool_calling.py
tests/: test_async_runner.py  test_cli.py  test_config.py  test_events_and_schemas.py  test_extraction.py  test_flows.py  test_llm.py  test_mock_mode.py  test_reporting.py  test_scoring.py  test_tools.py  test_trace_schema.py
