[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-eval-lab"
version = "0.1.0"
description = "Async LLM and agent evaluation harness with CLI using LiteLLM and PocketFlow."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agent Eval Lab" }]
dependencies = [
  "litellm>=1.60.0",
  "pocketflow>=0.0.1",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "rich>=13.7.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "vulture>=2.14"]

[project.scripts]
agent-eval = "agent_eval.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_eval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=agent_eval --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["agent_eval"]

[tool.coverage.report]
show_missing = true
skip_covered = true
