[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-eval-tool"
version = "0.1.0"
description = "Async LLM and agent evaluation harness with CLI using LiteLLM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "llm-eval-tool contributors" }]
dependencies = [
  "litellm>=1.60.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "rich>=13.7.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "vulture>=2.14",
]

[project.scripts]
llm-eval = "llm_eval.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_eval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=llm_eval --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["llm_eval"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W"]
ignore = ["F401"]
